GLM block destination now accepts predicate, deduplicated common nodes