@@ -2,34 +2,24 @@ package com.yanny.alicompat.compat.dimdungeons;
 
 import com.catastrophe573.dimdungeons.DungeonConfig;
 import com.catastrophe573.dimdungeons.utils.LootModifierNoDrops;
-import com.yanny.aci.api.RangeValue;
-import com.yanny.aci.tooltip.TooltipBuilder;
-import com.yanny.ali.api.IDataNode;
 import com.yanny.ali.api.ILootModifier;
 import com.yanny.ali.api.IOperation;
 import com.yanny.ali.api.IServerUtils;
-import com.yanny.ali.plugin.common.NodeUtils;
-import com.yanny.ali.plugin.common.nodes.ItemNode;
-import com.yanny.ali.plugin.server.EnchantedRanges;
-import com.yanny.ali.plugin.server.TooltipUtils;
+import com.yanny.ali.plugin.glm.Destination;
+import com.yanny.ali.plugin.glm.GlobalLootModifierUtils;
 import com.yanny.alicompat.accessor.BaseAccessor;
 import com.yanny.alicompat.accessor.FieldAccessor;
+import com.yanny.alicompat.accessor.GlmNodeUtils;
+import com.yanny.alicompat.accessor.IDestination;
 import com.yanny.alicompat.accessor.IGlobalLootModifierAccessor;
-import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.storage.loot.entries.LootPoolSingletonContainer;
-import net.minecraft.world.level.storage.loot.predicates.AllOfCondition;
-import net.minecraft.world.level.storage.loot.predicates.InvertedLootItemCondition;
 import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
+import java.util.Collections;
 import java.util.Optional;
-import java.util.Set;
 
-public class LootModifierNoDropsAccessor extends BaseAccessor<LootModifierNoDrops> implements IGlobalLootModifierAccessor {
+public class LootModifierNoDropsAccessor extends BaseAccessor<LootModifierNoDrops> implements IGlobalLootModifierAccessor, IDestination {
     @FieldAccessor
     protected LootItemCondition[] conditions;
 
@@ -39,51 +29,15 @@ public class LootModifierNoDropsAccessor extends BaseAccessor<LootModifierNoDrop
 
     @Override
     public Optional<ILootModifier<?>> getLootModifier(IServerUtils utils) {
-        List<LootItemCondition> conditionList = Arrays.asList(this.conditions);
-        Set<Block> blacklist = Set.copyOf(DungeonConfig.blockDropBlacklist);
-
-        if (blacklist.isEmpty()) {
-            return Optional.empty();
-        }
-
-        return Optional.of(new ILootModifier<Block>() {
-            @Override
-            public boolean predicate(Block value) {
-                return blacklist.contains(value);
-            }
-
-            @NotNull
-            @Override
-            public List<IOperation> getOperations() {
-                return List.of(new IOperation.RemoveOperation((itemStack) -> true, (src) -> keptNode(utils, conditionList, src)));
-            }
-
-            @NotNull
-            @Override
-            public IType<Block> getType() {
-                return IType.BLOCK;
-            }
-        });
+        return GlobalLootModifierUtils.getLootModifier(utils, parent, Arrays.asList(this.conditions),
+                (c) -> Collections.singletonList(new IOperation.RemoveOperation(
+                        (itemStack) -> true,
+                        (src) -> GlmNodeUtils.keptNode(utils, c, src))));
     }
 
-    @Nullable
-    private static IDataNode keptNode(IServerUtils utils, List<LootItemCondition> conditions, IDataNode src) {
-        if (conditions.isEmpty()) {
-            return null;
-        }
-
-        if (!(src instanceof ItemNode node)) {
-            return src;
-        }
-
-        List<LootItemCondition> allConditions = new ArrayList<>(node.getConditions());
-
-        allConditions.add(new InvertedLootItemCondition(new AllOfCondition(conditions.toArray(LootItemCondition[]::new))));
-
-        EnchantedRanges chance = NodeUtils.getEnchantedChance(utils, allConditions, node.getChance());
-        TooltipBuilder tooltip = TooltipUtils.getTooltip(utils, LootPoolSingletonContainer.DEFAULT_QUALITY, chance, new EnchantedRanges(new RangeValue(node.getCount())),
-                node.getFunctions(), allConditions);
-
-        return new ItemNode(node.getChance(), new RangeValue(node.getCount()), node.getItem(), tooltip.build(), node.getFunctions(), allConditions);
+    @NotNull
+    @Override
+    public Destination getDestination(IServerUtils ignoredUtils) {
+        return new Destination.Blocks(DungeonConfig.blockDropBlacklist::contains, false);
     }
 }
